fix blog preview overflow issue

--- a/src/LandingPage/BlogSection/BlogPreview/BlogPreview.module.css
+++ b/src/LandingPage/BlogSection/BlogPreview/BlogPreview.module.css
@@ -5,7 +5,7 @@
     cursor: pointer;
 
     /* temp for outer component styling */
-    height: 170px;
+    height: 220px;
     width: 250px;
 }
 
