--- a/src/LandingPage/BlogSection/BlogSection.module.css
+++ b/src/LandingPage/BlogSection/BlogSection.module.css
@@ -34,21 +34,23 @@
 .blog_indentation {
     height: 100%;
     padding: 1rem;
-    height: calc(100% - 49px);
     gap: 1rem;
     border-radius: 15px;
 }
 
 .blog_indentation.preview > div {
+    height: calc(100% - 49px);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 1rem;
+    width: 100%;
     height: 100%;
 
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-gap: 1rem;
-width: fit-content;
+    overflow-x: auto;
+    overflow-y: hidden;
 
-/* need to do some horizontal overflow */
+    /* need to do some horizontal overflow */
 
 }
 
